--- a/carro-service/src/main/resources/bootstrap.yaml
+++ b/carro-service/src/main/resources/bootstrap.yaml
@@ -1,9 +1,7 @@
 spring:
   application:
-    name: user-service
+    name: carro-service
   cloud:
     config:
       enabled: true
       uri: http://localhost:8081
-      
-
